# AI-ML

./: .env.example  .gitignore  Code_Generation_Model_with_LLMs.ipynb  End_to_End_Chatbot.ipynb  README.md
01-Agentic-Research-Workflow/src/: main.py
01-Generative-AI/: Generative AI Model.ipynb
02-End-to-End-ML-Platform/: config.yaml
02-End-to-End-ML-Platform/cicd/: train_and_deploy.yml
02-End-to-End-ML-Platform/tests/: test_pipeline.py
02-End-to-End-ML-Platform/training/: evaluate.py
02-LLM-Fundamentals/: LLM .ipynb
03-Anomaly-Detection-Streaming/src/: __init__.py
03-End-to-End-ML-Platform/: docker-compose.yml
03-End-to-End-ML-Platform/feature_store/: __init__.py
03-End-to-End-ML-Platform/monitoring/: __init__.py
05-Real-Time-Inference-Pipeline/: docker-compose.yml
05-Synthetic-Medical-Data/: Building_Synthetic_Medical_Records_Using_GANs.ipynb
06-Agentic-AI/: AI using Agentic AI.ipynb
07-Agentic-Research-Workflow/: README.md  pyproject.toml  requirements.txt
07-Agentic-Research-Workflow/src/: config.py
07-Agentic-Research-Workflow/src/graph/: nodes.py  state.py  workflow.py
07-Agentic-Research-Workflow/src/observability/: __init__.py  setup.py
07-Agentic-Research-Workflow/src/tools/: __init__.py  scraper.py
08-End-to-End-ML-Platform/: .env.example  README.md  pipeline.py  requirements.txt
09-Anomaly-Detection-Streaming/: README.md  config.yaml  requirements.txt
10-Real-Time-Inference-Pipeline/: README.md
consumer/: Dockerfile
dashboard/: requirements.txt
serving/: Dockerfile
src/: __init__.py
src/tools/: search.py
(+34 files in other folders)
